--- a/index.html
+++ b/index.html
@@ -1,87 +1,99 @@
-<!Doctype html>
-<html lang = "ar" dir = "rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-<title>معلومات عن عمر</title>
-<meta charset = "UTF-8">
+  <title>معلومات عن عمر</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-  body {
-    background: url("https://i.postimg.cc/rFXksBzN/cool-geometric-triangular-figure-neon-laser-light-great-backgrounds-wallpapers.jpg") no-repeat center center fixed;
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 100vw;
-	animation: fadein 4s ease;
-  }
-  @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-.container {
-background:transparent;
-	  text-align: center;
-	  padding: 30px 20px;
-	  max-width: 700px;
-	  margin: 40px auto;
-	  background:transparent;
-html {
-  scroll-behavior: smooth;
-}
-h1 {
-color:#39FF14;
-font-size:55px;
-}
-h2 {
-color:#D600FF;
-font-size:40px;
-margin-bottom: 20px;
-}
-p {
-  color: #FFD700;
-  font-size: 30px;
-}
-#motiv {
-  background: transparent;
-  border-radius: 20px;
-  font-size: 30px;
-  text-align: center;
-  color: #00ffff;
-  transition: all 2s ease-in-out;
-  box-shadow: 0 0 20px rgba(26, 115, 232, 0.4);
-  margin: 10px;
-  padding: 5px;
-  margin:5px;
-  font-weight: bold;
-  cursor: pointer;
-  width:200px;
-  height: 50px;
-  display:relative; 
-}
-#motiv:hover {
-	color:#00ffff;
-	font-size:32px;
-	transform: scale(1) rotate(5deg);
-	box-shadow: 0 0 30px rgba(26, 115, 232, 0.7);
-	padding:5px;
-	margin:5px;
-	border-radius:30px;
-	}
-</style>
-    <link rel="icon" href="https://i.postimg.cc/GtnpxH3X/cv.png" type="image/png">
-  </head>
-  <body>
-  <div class = "container">
-  <h1>معلومات عن عمر</h1>
-  <h2>المعلومات:</h2>
-  <p>,انا عندي 9 سنين دلوقتي
-  <br>
-  نفسي ابقى جامد في البرمجه😁
-  <br>
-  </p>
-  <button onclick = "alert(' انا هبقى مبرمج جامد في المستقبل😎👨🏻‍💻')"
-  id = "motiv">
-  دوس هنا😁</button>
+  <style>
+    body {
+      background: url("https://i.postimg.cc/Fs60Cpjb/IMG-3651.jpg") no-repeat center center fixed;
+      background-size: cover;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      width: 100vw;
+      animation: fadein 4s ease;
+      font-family: sans-serif;
+    }
+
+    @keyframes fadein {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
+    .container {
+      text-align: center;
+      padding: 30px 20px;
+      max-width: 700px;
+      margin: 40px auto;
+      background: transparent;
+    }
+
+    h1 {
+      color: #FFD700;
+      font-size: 55px;
+      background: transparent;
+    }
+
+    h2 {
+      color: #FCD116;
+      font-size: 40px;
+      margin-bottom: 20px;
+      background: transparent;
+    }
+
+    p {
+      color: #ffffff;
+      font-size: 30px;
+      font-weight: bold;
+      background: transparent;
+    }
+
+    #motiv {
+      background: transparent;
+      border: 2px solid #00ffff;
+      border-radius: 20px;
+      font-size: 30px;
+      text-align: center;
+      color: #00ffff;
+      transition: all 0.5s ease-in-out;
+      box-shadow: 0 0 10px #00ffff;
+      margin: 10px;
+      padding: 5px;
+      font-weight: bold;
+      cursor: pointer;
+      width: 200px;
+      height: 50px;
+      position: relative;
+    }
+
+    #motiv:hover {
+      color: #39FF14;
+      transform: scale(1.05) rotate(3deg);
+      box-shadow: 0 0 20px #39FF14;
+      border-color: #39FF14;
+    }
+  </style>
+  <link rel="icon" href="https://i.postimg.cc/GtnpxH3X/cv.png" type="image/png">
+</head>
+<body>
+  <div class="container">
+    <h1>معلومات عن عمر</h1>
+    <h2>المعلومات:</h2>
+<p>
+‎أنا عمر، عندي 9 سنين وبحب الكورة جدًا ⚽💚  
+<br>
+‎لسه مش بلعب في نادي ولا بتفرج كتير، بس بحس إني مبسوط وأنا بلعب مع صحابي 👫🏃‍♂️  
+<br>
+‎كل اللي نفسي فيه إني في يوم من الأيام ألبس تيشيرت فريق كبير، وأفرح لما الناس تصقفلي 👏✨  
+<br>
+‎أنا لسه في البداية… بس مين عارف؟ يمكن أكون نجم المستقبل! 🌟  
+</p>
+    <button onclick="alert('عمر هداف المستقبل😎⚽️')" id="motiv">دوس هنا😁</button>
   </div>
-  </body>
-  </html>
+</body>
+</html>
