--- a/index.html
+++ b/index.html
@@ -84,24 +84,15 @@
   <div class="container">
     <h1>معلومات عن عمر</h1>
     <h2>المعلومات:</h2>
-    <p>
-      أنا عمر… 
+<p>
+أنا عمر، عندي 9 سنين وبحب الكورة جدًا ⚽💚  
 <br>
-ممكن أكون صغير دلوقتي، 
+لسه مش بلعب في نادي ولا بتفرج كتير، بس بحس إني مبسوط وأنا بلعب مع صحابي 👫🏃‍♂️  
 <br>
-بس عندي حلم كبير ⚽🔥  
-      <br>
-      نفسي أبقى أشهر لاعب في العالم، والناس تهتف باسمي في كل الملاعب 🎉  
-      <br>
-      بتمرن كل يوم، وبشوف فيديوهات عن الكورة، وبحب ألعب في الهجوم! 💪  
-      <br>
-      أنا مش هلعب بس… 
+كل اللي نفسي فيه إني في يوم من الأيام ألبس تيشيرت فريق كبير، وأفرح لما الناس تصقفلي 👏✨  
 <br>
-أنا هكسر الشبكة! 😤  
-      <br>
-      استنوني… 
-<br>
-الأسطورة جاية! 🏆⚽  
+أنا لسه في البداية… بس مين عارف؟ يمكن أكون نجم المستقبل! 🌟  
+</p>
     </p>
     <button onclick="alert('عمر هداف المستقبل😎⚽️')" id="motiv">دوس هنا😁</button>
   </div>
